[gd_scene load_steps=10 format=3 uid="uid://clbg1eyvs7ak8"]

[ext_resource type="Script" uid="uid://c155d6c6f3lr3" path="res://src/main_menu.gd" id="1_3er1b"]
[ext_resource type="PackedScene" uid="uid://binsf0lskx6jt" path="res://scene/LoadingScreen.tscn" id="2_hxu56"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3er1b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hxu56"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fwvj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0iwki"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sepwh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_14wem"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2atga"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3er1b")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.071
anchor_top = 0.31300002
anchor_right = 0.071
anchor_bottom = 0.31300002
offset_left = -82.792
offset_top = -11.82402
offset_right = 85.208
offset_bottom = 11.17598
grow_vertical = 2
text = "Tower Defence Godot"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 203.0
offset_bottom = 648.0
size_flags_horizontal = 3
alignment = 1

[node name="start_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Начать"

[node name="settings_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Настройки"

[node name="account_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Аккаунт"

[node name="exit_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Выход"

[node name="GameMenu" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Выберите режим игры"
horizontal_alignment = 1

[node name="play_random_btn" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
text = "Рандом"

[node name="play_friend_btn" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
text = "С другом"

[node name="AccountsMenu" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="SignUp" type="VBoxContainer" parent="AccountsMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="AccountsMenu/SignUp"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Аккаунт"
horizontal_alignment = 1

[node name="username_le" type="LineEdit" parent="AccountsMenu/SignUp"]
layout_mode = 2
placeholder_text = "Имя пользователя"

[node name="email_le" type="LineEdit" parent="AccountsMenu/SignUp"]
layout_mode = 2
placeholder_text = "Почта"

[node name="password_le" type="LineEdit" parent="AccountsMenu/SignUp"]
layout_mode = 2
placeholder_text = "Пароль"
secret = true

[node name="sign_up_btn" type="Button" parent="AccountsMenu/SignUp"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Зарегистрироваться"

[node name="go_sign_in_btn" type="Button" parent="AccountsMenu/SignUp"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_3er1b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hxu56")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2fwvj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0iwki")
text = "Уже есть учётная запись? Вход
"

[node name="SignIn" type="VBoxContainer" parent="AccountsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="AccountsMenu/SignIn"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Аккаунт"
horizontal_alignment = 1

[node name="username_le" type="LineEdit" parent="AccountsMenu/SignIn"]
layout_mode = 2
placeholder_text = "Имя пользователя или почта"

[node name="password_le" type="LineEdit" parent="AccountsMenu/SignIn"]
layout_mode = 2
placeholder_text = "Пароль"
secret = true

[node name="sign_in_btn" type="Button" parent="AccountsMenu/SignIn"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Войти"

[node name="go_sign_up_btn" type="Button" parent="AccountsMenu/SignIn"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_3er1b")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sepwh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_14wem")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2atga")
text = "У вас нет аккаунта? Зарегистрироваться"

[node name="LoadingScreen" parent="." instance=ExtResource("2_hxu56")]
visible = false
layout_mode = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]
oversampling_override = 1.0
initial_position = 2

[connection signal="pressed" from="VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/settings_btn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/account_btn" to="." method="_on_account_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/play_random_btn" to="." method="_on_play_random_btn_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/play_friend_btn" to="." method="_on_play_friend_btn_pressed"]
[connection signal="text_changed" from="AccountsMenu/SignUp/username_le" to="." method="_on_username_le_text_changed"]
[connection signal="text_changed" from="AccountsMenu/SignUp/email_le" to="." method="_on_email_le_text_changed"]
[connection signal="text_changed" from="AccountsMenu/SignUp/password_le" to="." method="_on_password_le_text_changed"]
[connection signal="pressed" from="AccountsMenu/SignUp/sign_up_btn" to="." method="_on_sign_up_btn_pressed"]
[connection signal="pressed" from="AccountsMenu/SignUp/go_sign_in_btn" to="." method="_on_go_sign_in_btn_pressed"]
[connection signal="text_changed" from="AccountsMenu/SignIn/username_le" to="." method="_on_username_le_text_changed"]
[connection signal="text_changed" from="AccountsMenu/SignIn/password_le" to="." method="_on_password_le_text_changed"]
[connection signal="pressed" from="AccountsMenu/SignIn/sign_in_btn" to="." method="_on_sign_in_btn_pressed"]
[connection signal="pressed" from="AccountsMenu/SignIn/go_sign_up_btn" to="." method="_on_go_sign_up_btn_pressed"]
